tests/request-interception-mirror/manifests/dnsingress-extauthz.yaml
apiVersion: psc.example.com/v1
kind: DnsIngress
metadata:
  name: req030-extauthz
  namespace: req030-gateway
spec:
  hostname: req030-extauthz.${RHCL_ZONE_ROOT_DOMAIN}
  ingressClass: nginx
